{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 20,
  "lineage": "bfd21e88-12f4-e445-b428-1e0d8f15fb20",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/BackEndAddressPool",
                "ip_addresses": [],
                "name": "BackEndAddressPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/httpSetting",
                "name": "httpSetting",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 1,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/webAppPport",
                "name": "webAppPport",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/publicIPAddresses/demo-public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/webAppPport",
                "name": "webAppPport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-1"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/frontendIPConfigurations/webAppPport",
                "frontend_ip_configuration_name": "webAppPport",
                "frontend_port_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/frontendPorts/webAppPport",
                "frontend_port_name": "webAppPport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/httpListener",
                "name": "httpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway",
            "identity": [],
            "location": "westeurope",
            "name": "appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/backendAddressPools/BackEndAddressPool",
                "backend_address_pool_name": "BackEndAddressPool",
                "backend_http_settings_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/backendHttpSettingsCollection/httpSetting",
                "backend_http_settings_name": "httpSetting",
                "http_listener_id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/httpListeners/httpListener",
                "http_listener_name": "httpListener",
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/applicationGateways/appgateway/requestRoutingRules/httpRoutingRule",
                "name": "httpRoutingRule",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "application-gateway-demo-w87ialgz67",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.demo",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-subnet-1",
            "azurerm_virtual_network.demo",
            "random_string.random-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/networkSecurityGroups/demo-instance-nsg",
            "location": "westeurope",
            "name": "demo-instance-nsg",
            "resource_group_name": "application-gateway-demo-w87ialgz67",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo",
            "random_string.random-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "application-gateway-demo-w87ialgz67",
            "fqdn": "application-gateway-demo-w87ialgz67.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/publicIPAddresses/demo-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.240.163",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "demo-public-ip",
            "resource_group_name": "application-gateway-demo-w87ialgz67",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "random_string.random-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-1",
            "name": "demo-subnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "application-gateway-demo-w87ialgz67",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo",
            "random_string.random-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-2",
            "name": "demo-subnet-2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "application-gateway-demo-w87ialgz67",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo",
            "random_string.random-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7bc16311-9e50-4427-b378-aabf057366b4",
            "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/virtualNetworks/demo-network",
            "location": "westeurope",
            "name": "demo-network",
            "resource_group_name": "application-gateway-demo-w87ialgz67",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-1",
                "name": "demo-subnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/66c1a89b-461e-42b6-a303-6c3f3901e941/resourceGroups/application-gateway-demo-w87ialgz67/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-2",
                "name": "demo-subnet-2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "random_string.random-name"
          ]
        }
      ]
    }
  ]
}